<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:defaultValue="100"
        android:dialogTitle="@string/pulseFrequencyTitle"
        android:inputType="number"
        android:key="editText_pulseFrequency"
        android:summary="@string/pulseFrequencyTitle"
        android:title="@string/pulseFrequencyTitle" />

    <EditTextPreference
        android:defaultValue="2"
        android:dialogTitle="@string/pauseForRescueBreaths"
        android:inputType="number"
        android:key="editText_pauseForRescueBreaths"
        android:title="@string/pauseForRescueBreaths" />

    <EditTextPreference
        android:defaultValue="30"
        android:dialogTitle="@string/rescueBreathsFrequencyTitle"
        android:inputType="number"
        android:key="editText_pulseCounterMax"
        android:title="@string/rescueBreathsFrequencyTitle" />

    <EditTextPreference
        android:defaultValue="112"
        android:dialogTitle="@string/ambulancePhoneNumberTitle"
        android:inputType="phone"
        android:key="editText_ambulancePhoneNumber"
        android:summary="@string/ambulancePhoneNumber"
        android:title="@string/ambulancePhoneNumberTitle" />

</PreferenceScreen>